Fixed issue with particles-bg not covering the full height

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ body {
   padding: 0;
   font-family: 'Noto Serif',
     serif;
-  height: 100%;
 }
 
 button {
